bisonfinal.output
Grammar

    0 $accept: program "end of file"

    1 program: body "end" subprograms
    2        | body error subprograms

    3 body: declarations statements

    4 declarations: declarations type vars
    5             | declarations "record" fields "endrec" vars
    6             | declarations "data" vals
    7             | ε

    8 type: "integer"
    9     | "real"
   10     | "logicial"
   11     | "character"
   12     | "complex"

   13 vars: vars "," undef_variable
   14     | undef_variable

   15 undef_variable: "list" undef_variable
   16               | "id" "(" dims ")"
   17               | "id"

   18 dims: dims "," dim
   19     | dim

   20 dim: "id"
   21    | "ICONST"

   22 fields: fields field
   23       | field

   24 field: type vars
   25      | "record" fields "endrec" vars

   26 vals: vals "," "id" value_list
   27     | "id" value_list

   28 value_list: "/" values "/"

   29 values: values "," value
   30       | value

   31 value: sign constant
   32      | "string"

   33 sign: "+ or -"
   34     | ε

   35 constant: simple_constant
   36         | complex_constant

   37 simple_constant: "ICONST"
   38                | "RCONST"
   39                | "LCONST"
   40                | "CCONST"

   41 complex_constant: "(" "RCONST" ":" sign "RCONST" ")"
   42                 | error "RCONST" ":" sign "RCONST" ")"
   43                 | "(" "RCONST" error sign "RCONST" ")"
   44                 | "(" "RCONST" ":" sign "RCONST" error

   45 statements: statements labeled_statement
   46           | labeled_statement

   47 labeled_statement: label statement
   48                  | statement

   49 label: "ICONST"

   50 statement: simple_statement
   51          | compound_statement

   52 simple_statement: assignment
   53                 | goto_statement
   54                 | if_statement
   55                 | subroutine_call
   56                 | io_statement
   57                 | "continue"
   58                 | "return"
   59                 | "stop"

   60 assignment: variable "=" expression
   61           | variable error expression
   62           | variable "=" "string"
   63           | variable error "string"

   64 variable: variable "." "id"
   65         | variable "(" expressions ")"
   66         | "listfunc" "(" expression ")"
   67         | "id"

   68 expressions: expressions "," expression
   69            | expression

   70 expression: expression "||" expression
   71           | expression "&&" expression
   72           | expression "== or != or < or > or <= or >=" expression
   73           | expression "+ or -" expression
   74           | expression "*" expression
   75           | expression "/" expression
   76           | expression "**" expression
   77           | "!=" expression
   78           | "+ or -" expression
   79           | variable
   80           | simple_constant
   81           | "length" "(" expression ")"
   82           | "new" "(" expression ")"
   83           | "(" expression ")"
   84           | "(" expression ":" expression ")"
   85           | listexpression

   86 listexpression: "[" expressions "]"
   87               | "[" "]"

   88 goto_statement: "goto" label
   89               | "goto" "id" "," "(" labels ")"

   90 labels: labels "," label
   91       | label

   92 if_statement: "if" "(" expression ")" label "," label "," label
   93             | "if" "(" expression ")" simple_statement

   94 subroutine_call: "call" variable

   95 io_statement: "read" read_list
   96             | "write" write_list

   97 read_list: read_list "," read_item
   98          | read_item

   99 read_item: variable
  100          | "(" read_list "," "id" "=" iter_space ")"

  101 iter_space: expression "," expression step

  102 step: "," expression
  103     | ε

  104 write_list: write_list "," write_item
  105           | write_item

  106 write_item: expression
  107           | "(" write_list "," "id" "=" iter_space ")"
  108           | "string"

  109 compound_statement: branch_statement
  110                   | loop_statement

  111 $@1: ε

  112 branch_statement: "if" "(" expression ")" "then" $@1 body tail

  113 $@2: ε

  114 tail: "else" $@2 body "endif"
  115     | "endif"

  116 $@3: ε

  117 loop_statement: "do" "id" "=" iter_space $@3 body "enddo"

  118 subprograms: subprograms subprogram
  119            | ε

  120 subprogram: header body "end"

  121 header: type "function" "id" "(" formal_parameters ")"
  122       | "list" "function" "id" "(" formal_parameters ")"
  123       | "subroutine" "id" "(" formal_parameters ")"
  124       | "subroutine" "id"

  125 formal_parameters: type vars "," formal_parameters
  126                  | type vars


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256) 2 42 43 44 61 63
    "function" <strval> (258) 121 122
    "subroutine" <strval> (259) 123 124
    "end" <strval> (260) 1 120
    "integer" <strval> (261) 8
    "real" <strval> (262) 9
    "logicial" <strval> (263) 10
    "character" <strval> (264) 11
    "complex" <strval> (265) 12
    "record" <strval> (266) 5 25
    "endrec" <strval> (267) 5 25
    "list" <strval> (268) 15 122
    "data" <strval> (269) 6
    "continue" <strval> (270) 57
    "goto" <strval> (271) 88 89
    "call" <strval> (272) 94
    "read" <strval> (273) 95
    "write" <strval> (274) 96
    "new" <strval> (275) 82
    "length" <strval> (276) 81
    "if" <strval> (277) 92 93 112
    "then" <strval> (278) 112
    "else" <strval> (279) 114
    "endif" <strval> (280) 114 115
    "do" <strval> (281) 117
    "enddo" <strval> (282) 117
    "stop" <strval> (283) 59
    "return" <strval> (284) 58
    "id" <strval> (285) 16 17 20 26 27 64 67 89 100 107 117 121 122 123 124
    "ICONST" <intval> (286) 21 37 49
    "RCONST" <floatval> (287) 38 41 42 43 44
    "LCONST" <charval> (288) 39
    "CCONST" <strval> (289) 40
    "listfunc" (290) 66
    "string" (291) 32 62 63 108
    "||" (292) 70
    "&&" (293) 71
    "!=" (294) 77
    "== or != or < or > or <= or >=" (295) 72
    "+ or -" (296) 33 73 78
    "*" (297) 74
    "/" (298) 28 75
    "**" (299) 76
    "(" (300) 16 41 43 44 65 66 81 82 83 84 89 92 93 100 107 112 121 122 123
    ")" (301) 16 41 42 43 65 66 81 82 83 84 89 92 93 100 107 112 121 122 123
    "," (302) 13 18 26 29 68 89 90 92 97 100 101 102 104 107 125
    "=" (303) 60 62 100 107 117
    "." (304) 64
    ":" (305) 41 42 44 84
    "[" (306) 86 87
    "]" (307) 86 87
    LOWER_THAN_ELSE (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    program <strval> (55)
        on left: 1 2
        on right: 0
    body <strval> (56)
        on left: 3
        on right: 1 2 112 114 117 120
    declarations <strval> (57)
        on left: 4 5 6 7
        on right: 3 4 5 6
    type <strval> (58)
        on left: 8 9 10 11 12
        on right: 4 24 121 125 126
    vars <strval> (59)
        on left: 13 14
        on right: 4 5 13 24 25 125 126
    undef_variable <strval> (60)
        on left: 15 16 17
        on right: 13 14 15
    dims <strval> (61)
        on left: 18 19
        on right: 16 18
    dim <strval> (62)
        on left: 20 21
        on right: 18 19
    fields <strval> (63)
        on left: 22 23
        on right: 5 22 25
    field <strval> (64)
        on left: 24 25
        on right: 22 23
    vals <strval> (65)
        on left: 26 27
        on right: 6 26
    value_list <strval> (66)
        on left: 28
        on right: 26 27
    values <strval> (67)
        on left: 29 30
        on right: 28 29
    value <strval> (68)
        on left: 31 32
        on right: 29 30
    sign <strval> (69)
        on left: 33 34
        on right: 31 41 42 43 44
    constant <strval> (70)
        on left: 35 36
        on right: 31
    simple_constant <strval> (71)
        on left: 37 38 39 40
        on right: 35 80
    complex_constant <strval> (72)
        on left: 41 42 43 44
        on right: 36
    statements <strval> (73)
        on left: 45 46
        on right: 3 45
    labeled_statement <strval> (74)
        on left: 47 48
        on right: 45 46
    label <strval> (75)
        on left: 49
        on right: 47 88 90 91 92
    statement <strval> (76)
        on left: 50 51
        on right: 47 48
    simple_statement (77)
        on left: 52 53 54 55 56 57 58 59
        on right: 50 93
    assignment <strval> (78)
        on left: 60 61 62 63
        on right: 52
    variable <strval> (79)
        on left: 64 65 66 67
        on right: 60 61 62 63 64 65 79 94 99
    expressions <strval> (80)
        on left: 68 69
        on right: 65 68 86
    expression <strval> (81)
        on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 60 61 66 68 69 70 71 72 73 74 75 76 77 78 81 82 83 84 92 93 101 102 106 112
    listexpression <strval> (82)
        on left: 86 87
        on right: 85
    goto_statement <strval> (83)
        on left: 88 89
        on right: 53
    labels <strval> (84)
        on left: 90 91
        on right: 89 90
    if_statement <strval> (85)
        on left: 92 93
        on right: 54
    subroutine_call <strval> (86)
        on left: 94
        on right: 55
    io_statement <strval> (87)
        on left: 95 96
        on right: 56
    read_list <strval> (88)
        on left: 97 98
        on right: 95 97 100
    read_item <strval> (89)
        on left: 99 100
        on right: 97 98
    iter_space <strval> (90)
        on left: 101
        on right: 100 107 117
    step <strval> (91)
        on left: 102 103
        on right: 101
    write_list <strval> (92)
        on left: 104 105
        on right: 96 104 107
    write_item <strval> (93)
        on left: 106 107 108
        on right: 104 105
    compound_statement <strval> (94)
        on left: 109 110
        on right: 51
    branch_statement <strval> (95)
        on left: 112
        on right: 109
    $@1 (96)
        on left: 111
        on right: 112
    tail <strval> (97)
        on left: 114 115
        on right: 112
    $@2 (98)
        on left: 113
        on right: 114
    loop_statement <strval> (99)
        on left: 117
        on right: 110
    $@3 (100)
        on left: 116
        on right: 117
    subprograms <strval> (101)
        on left: 118 119
        on right: 1 2 118
    subprogram <strval> (102)
        on left: 120
        on right: 118
    header <strval> (103)
        on left: 121 122 123 124
        on right: 120
    formal_parameters <strval> (104)
        on left: 125 126
        on right: 121 122 123 125


State 0

    0 $accept: • program "end of file"

    $default  reduce using rule 7 (declarations)

    program       go to state 1
    body          go to state 2
    declarations  go to state 3


State 1

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 4


State 2

    1 program: body • "end" subprograms
    2        | body • error subprograms

    error  shift, and go to state 5
    "end"  shift, and go to state 6


State 3

    3 body: declarations • statements
    4 declarations: declarations • type vars
    5             | declarations • "record" fields "endrec" vars
    6             | declarations • "data" vals

    "integer"    shift, and go to state 7
    "real"       shift, and go to state 8
    "logicial"   shift, and go to state 9
    "character"  shift, and go to state 10
    "complex"    shift, and go to state 11
    "record"     shift, and go to state 12
    "data"       shift, and go to state 13
    "continue"   shift, and go to state 14
    "goto"       shift, and go to state 15
    "call"       shift, and go to state 16
    "read"       shift, and go to state 17
    "write"      shift, and go to state 18
    "if"         shift, and go to state 19
    "do"         shift, and go to state 20
    "stop"       shift, and go to state 21
    "return"     shift, and go to state 22
    "id"         shift, and go to state 23
    "ICONST"     shift, and go to state 24
    "listfunc"   shift, and go to state 25

    type                go to state 26
    statements          go to state 27
    labeled_statement   go to state 28
    label               go to state 29
    statement           go to state 30
    simple_statement    go to state 31
    assignment          go to state 32
    variable            go to state 33
    goto_statement      go to state 34
    if_statement        go to state 35
    subroutine_call     go to state 36
    io_statement        go to state 37
    compound_statement  go to state 38
    branch_statement    go to state 39
    loop_statement      go to state 40


State 4

    0 $accept: program "end of file" •

    $default  accept


State 5

    2 program: body error • subprograms

    $default  reduce using rule 119 (subprograms)

    subprograms  go to state 41


State 6

    1 program: body "end" • subprograms

    $default  reduce using rule 119 (subprograms)

    subprograms  go to state 42


State 7

    8 type: "integer" •

    $default  reduce using rule 8 (type)


State 8

    9 type: "real" •

    $default  reduce using rule 9 (type)


State 9

   10 type: "logicial" •

    $default  reduce using rule 10 (type)


State 10

   11 type: "character" •

    $default  reduce using rule 11 (type)


State 11

   12 type: "complex" •

    $default  reduce using rule 12 (type)


State 12

    5 declarations: declarations "record" • fields "endrec" vars

    "integer"    shift, and go to state 7
    "real"       shift, and go to state 8
    "logicial"   shift, and go to state 9
    "character"  shift, and go to state 10
    "complex"    shift, and go to state 11
    "record"     shift, and go to state 43

    type    go to state 44
    fields  go to state 45
    field   go to state 46


State 13

    6 declarations: declarations "data" • vals

    "id"  shift, and go to state 47

    vals  go to state 48


State 14

   57 simple_statement: "continue" •

    $default  reduce using rule 57 (simple_statement)


State 15

   88 goto_statement: "goto" • label
   89               | "goto" • "id" "," "(" labels ")"

    "id"      shift, and go to state 49
    "ICONST"  shift, and go to state 24

    label  go to state 50


State 16

   94 subroutine_call: "call" • variable

    "id"        shift, and go to state 23
    "listfunc"  shift, and go to state 25

    variable  go to state 51


State 17

   95 io_statement: "read" • read_list

    "id"        shift, and go to state 23
    "listfunc"  shift, and go to state 25
    "("         shift, and go to state 52

    variable   go to state 53
    read_list  go to state 54
    read_item  go to state 55


State 18

   96 io_statement: "write" • write_list

    "new"       shift, and go to state 56
    "length"    shift, and go to state 57
    "id"        shift, and go to state 23
    "ICONST"    shift, and go to state 58
    "RCONST"    shift, and go to state 59
    "LCONST"    shift, and go to state 60
    "CCONST"    shift, and go to state 61
    "listfunc"  shift, and go to state 25
    "string"    shift, and go to state 62
    "!="        shift, and go to state 63
    "+ or -"    shift, and go to state 64
    "("         shift, and go to state 65
    "["         shift, and go to state 66

    simple_constant  go to state 67
    variable         go to state 68
    expression       go to state 69
    listexpression   go to state 70
    write_list       go to state 71
    write_item       go to state 72


State 19

   92 if_statement: "if" • "(" expression ")" label "," label "," label
   93             | "if" • "(" expression ")" simple_statement
  112 branch_statement: "if" • "(" expression ")" "then" $@1 body tail

    "("  shift, and go to state 73


State 20

  117 loop_statement: "do" • "id" "=" iter_space $@3 body "enddo"

    "id"  shift, and go to state 74


State 21

   59 simple_statement: "stop" •

    $default  reduce using rule 59 (simple_statement)


State 22

   58 simple_statement: "return" •

    $default  reduce using rule 58 (simple_statement)


State 23

   67 variable: "id" •

    $default  reduce using rule 67 (variable)


State 24

   49 label: "ICONST" •

    $default  reduce using rule 49 (label)


State 25

   66 variable: "listfunc" • "(" expression ")"

    "("  shift, and go to state 75


State 26

    4 declarations: declarations type • vars

    "list"  shift, and go to state 76
    "id"    shift, and go to state 77

    vars            go to state 78
    undef_variable  go to state 79


State 27

    3 body: declarations statements •
   45 statements: statements • labeled_statement

    "continue"  shift, and go to state 14
    "goto"      shift, and go to state 15
    "call"      shift, and go to state 16
    "read"      shift, and go to state 17
    "write"     shift, and go to state 18
    "if"        shift, and go to state 19
    "do"        shift, and go to state 20
    "stop"      shift, and go to state 21
    "return"    shift, and go to state 22
    "id"        shift, and go to state 23
    "ICONST"    shift, and go to state 24
    "listfunc"  shift, and go to state 25

    $default  reduce using rule 3 (body)

    labeled_statement   go to state 80
    label               go to state 29
    statement           go to state 30
    simple_statement    go to state 31
    assignment          go to state 32
    variable            go to state 33
    goto_statement      go to state 34
    if_statement        go to state 35
    subroutine_call     go to state 36
    io_statement        go to state 37
    compound_statement  go to state 38
    branch_statement    go to state 39
    loop_statement      go to state 40


State 28

   46 statements: labeled_statement •

    $default  reduce using rule 46 (statements)


State 29

   47 labeled_statement: label • statement

    "continue"  shift, and go to state 14
    "goto"      shift, and go to state 15
    "call"      shift, and go to state 16
    "read"      shift, and go to state 17
    "write"     shift, and go to state 18
    "if"        shift, and go to state 19
    "do"        shift, and go to state 20
    "stop"      shift, and go to state 21
    "return"    shift, and go to state 22
    "id"        shift, and go to state 23
    "listfunc"  shift, and go to state 25

    statement           go to state 81
    simple_statement    go to state 31
    assignment          go to state 32
    variable            go to state 33
    goto_statement      go to state 34
    if_statement        go to state 35
    subroutine_call     go to state 36
    io_statement        go to state 37
    compound_statement  go to state 38
    branch_statement    go to state 39
    loop_statement      go to state 40


State 30

   48 labeled_statement: statement •

    $default  reduce using rule 48 (labeled_statement)


State 31

   50 statement: simple_statement •

    $default  reduce using rule 50 (statement)


State 32

   52 simple_statement: assignment •

    $default  reduce using rule 52 (simple_statement)


State 33

   60 assignment: variable • "=" expression
   61           | variable • error expression
   62           | variable • "=" "string"
   63           | variable • error "string"
   64 variable: variable • "." "id"
   65         | variable • "(" expressions ")"

    error  shift, and go to state 82
    "("    shift, and go to state 83
    "="    shift, and go to state 84
    "."    shift, and go to state 85


State 34

   53 simple_statement: goto_statement •

    $default  reduce using rule 53 (simple_statement)


State 35

   54 simple_statement: if_statement •

    $default  reduce using rule 54 (simple_statement)


State 36

   55 simple_statement: subroutine_call •

    $default  reduce using rule 55 (simple_statement)


State 37

   56 simple_statement: io_statement •

    $default  reduce using rule 56 (simple_statement)


State 38

   51 statement: compound_statement •

    $default  reduce using rule 51 (statement)


State 39

  109 compound_statement: branch_statement •

    $default  reduce using rule 109 (compound_statement)


State 40

  110 compound_statement: loop_statement •

    $default  reduce using rule 110 (compound_statement)


State 41

    2 program: body error subprograms •
  118 subprograms: subprograms • subprogram

    "subroutine"  shift, and go to state 86
    "integer"     shift, and go to state 7
    "real"        shift, and go to state 8
    "logicial"    shift, and go to state 9
    "character"   shift, and go to state 10
    "complex"     shift, and go to state 11
    "list"        shift, and go to state 87

    $default  reduce using rule 2 (program)

    type        go to state 88
    subprogram  go to state 89
    header      go to state 90


State 42

    1 program: body "end" subprograms •
  118 subprograms: subprograms • subprogram

    "subroutine"  shift, and go to state 86
    "integer"     shift, and go to state 7
    "real"        shift, and go to state 8
    "logicial"    shift, and go to state 9
    "character"   shift, and go to state 10
    "complex"     shift, and go to state 11
    "list"        shift, and go to state 87

    $default  reduce using rule 1 (program)

    type        go to state 88
    subprogram  go to state 89
    header      go to state 90


State 43

   25 field: "record" • fields "endrec" vars

    "integer"    shift, and go to state 7
    "real"       shift, and go to state 8
    "logicial"   shift, and go to state 9
    "character"  shift, and go to state 10
    "complex"    shift, and go to state 11
    "record"     shift, and go to state 43

    type    go to state 44
    fields  go to state 91
    field   go to state 46


State 44

   24 field: type • vars

    "list"  shift, and go to state 76
    "id"    shift, and go to state 77

    vars            go to state 92
    undef_variable  go to state 79


State 45

    5 declarations: declarations "record" fields • "endrec" vars
   22 fields: fields • field

    "integer"    shift, and go to state 7
    "real"       shift, and go to state 8
    "logicial"   shift, and go to state 9
    "character"  shift, and go to state 10
    "complex"    shift, and go to state 11
    "record"     shift, and go to state 43
    "endrec"     shift, and go to state 93

    type   go to state 44
    field  go to state 94


State 46

   23 fields: field •

    $default  reduce using rule 23 (fields)


State 47

   27 vals: "id" • value_list

    "/"  shift, and go to state 95

    value_list  go to state 96


State 48

    6 declarations: declarations "data" vals •
   26 vals: vals • "," "id" value_list

    ","  shift, and go to state 97

    $default  reduce using rule 6 (declarations)


State 49

   89 goto_statement: "goto" "id" • "," "(" labels ")"

    ","  shift, and go to state 98


State 50

   88 goto_statement: "goto" label •

    $default  reduce using rule 88 (goto_statement)


State 51

   64 variable: variable • "." "id"
   65         | variable • "(" expressions ")"
   94 subroutine_call: "call" variable •

    "("  shift, and go to state 83
    "."  shift, and go to state 85

    $default  reduce using rule 94 (subroutine_call)


State 52

  100 read_item: "(" • read_list "," "id" "=" iter_space ")"

    "id"        shift, and go to state 23
    "listfunc"  shift, and go to state 25
    "("         shift, and go to state 52

    variable   go to state 53
    read_list  go to state 99
    read_item  go to state 55


State 53

   64 variable: variable • "." "id"
   65         | variable • "(" expressions ")"
   99 read_item: variable •

    "("  shift, and go to state 83
    "."  shift, and go to state 85

    $default  reduce using rule 99 (read_item)


State 54

   95 io_statement: "read" read_list •
   97 read_list: read_list • "," read_item

    ","  shift, and go to state 100

    $default  reduce using rule 95 (io_statement)


State 55

   98 read_list: read_item •

    $default  reduce using rule 98 (read_list)


State 56

   82 expression: "new" • "(" expression ")"

    "("  shift, and go to state 101


State 57

   81 expression: "length" • "(" expression ")"

    "("  shift, and go to state 102


State 58

   37 simple_constant: "ICONST" •

    $default  reduce using rule 37 (simple_constant)


State 59

   38 simple_constant: "RCONST" •

    $default  reduce using rule 38 (simple_constant)


State 60

   39 simple_constant: "LCONST" •

    $default  reduce using rule 39 (simple_constant)


State 61

   40 simple_constant: "CCONST" •

    $default  reduce using rule 40 (simple_constant)


State 62

  108 write_item: "string" •

    $default  reduce using rule 108 (write_item)


State 63

   77 expression: "!=" • expression

    "new"       shift, and go to state 56
    "length"    shift, and go to state 57
    "id"        shift, and go to state 23
    "ICONST"    shift, and go to state 58
    "RCONST"    shift, and go to state 59
    "LCONST"    shift, and go to state 60
    "CCONST"    shift, and go to state 61
    "listfunc"  shift, and go to state 25
    "!="        shift, and go to state 63
    "+ or -"    shift, and go to state 64
    "("         shift, and go to state 103
    "["         shift, and go to state 66

    simple_constant  go to state 67
    variable         go to state 68
    expression       go to state 104
    listexpression   go to state 70


State 64

   78 expression: "+ or -" • expression

    "new"       shift, and go to state 56
    "length"    shift, and go to state 57
    "id"        shift, and go to state 23
    "ICONST"    shift, and go to state 58
    "RCONST"    shift, and go to state 59
    "LCONST"    shift, and go to state 60
    "CCONST"    shift, and go to state 61
    "listfunc"  shift, and go to state 25
    "!="        shift, and go to state 63
    "+ or -"    shift, and go to state 64
    "("         shift, and go to state 103
    "["         shift, and go to state 66

    simple_constant  go to state 67
    variable         go to state 68
    expression       go to state 105
    listexpression   go to state 70


State 65

   83 expression: "(" • expression ")"
   84           | "(" • expression ":" expression ")"
  107 write_item: "(" • write_list "," "id" "=" iter_space ")"

    "new"       shift, and go to state 56
    "length"    shift, and go to state 57
    "id"        shift, and go to state 23
    "ICONST"    shift, and go to state 58
    "RCONST"    shift, and go to state 59
    "LCONST"    shift, and go to state 60
    "CCONST"    shift, and go to state 61
    "listfunc"  shift, and go to state 25
    "string"    shift, and go to state 62
    "!="        shift, and go to state 63
    "+ or -"    shift, and go to state 64
    "("         shift, and go to state 65
    "["         shift, and go to state 66

    simple_constant  go to state 67
    variable         go to state 68
    expression       go to state 106
    listexpression   go to state 70
    write_list       go to state 107
    write_item       go to state 72


State 66

   86 listexpression: "[" • expressions "]"
   87               | "[" • "]"

    "new"       shift, and go to state 56
    "length"    shift, and go to state 57
    "id"        shift, and go to state 23
    "ICONST"    shift, and go to state 58
    "RCONST"    shift, and go to state 59
    "LCONST"    shift, and go to state 60
    "CCONST"    shift, and go to state 61
    "listfunc"  shift, and go to state 25
    "!="        shift, and go to state 63
    "+ or -"    shift, and go to state 64
    "("         shift, and go to state 103
    "["         shift, and go to state 66
    "]"         shift, and go to state 108
